--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -169,10 +169,14 @@ h1 img {
 }
 #window-container {
   width: 100%;
-  height: 100%;
+  padding-top: 50px;
   transform-origin: center center;
   overflow: auto;
   transition: all 0.2s linear;
+  overflow: auto;
+}
+.timeline {
+  padding: 0 0.5rem;
 }
 #container__wrapper::-webkit-scrollbar {
   display: none;
@@ -324,8 +328,8 @@ em-emoji-picker,
   flex-direction: column;
   gap: 0.75rem;
 }
-
-.board-description button {
+#board-description-button,
+.normal-submit {
   font-size: small;
   width: fit-content;
   background: var(--accent);
@@ -354,7 +358,7 @@ button:active {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  z-index: 999;
+  z-index: 1;
 }
 
 #tap-anywhere {
@@ -393,9 +397,18 @@ button:active {
   width: calc(100% - var(--element-space) * 2);
   background: var(--cream);
 }
+.post {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  background: var(--cream);
+}
 
-.post-set input {
-  color: var(--black);
+.post-set input,
+.post #input-post {
+  color: var(--accent);
   background: var(--cream);
   font-size: 1rem;
   width: 100%;
@@ -421,8 +434,14 @@ button:active {
   width: 90%;
   cursor: pointer;
 }
+.normal-submit {
+  cursor: pointer;
+  z-index: 199;
+  position: relative;
+}
 
-.post-set input::placeholder {
+.post-set input::placeholder,
+.post input::placeholder {
   color: var(--accent);
   font-size: 0.75rem;
 }
