タイプライターアニメーションを追加

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -176,6 +176,7 @@ h1 img {
   overflow: auto;
 }
 .timeline {
+  font-size: small;
   padding: 0 0.5rem;
 }
 #container__wrapper::-webkit-scrollbar {
@@ -250,8 +251,11 @@ h1 img {
   box-shadow: 0.5rem 0.5rem 0 0 var(--accent);
   z-index: 1;
 }
-
-em-emoji-picker,
+.board.entrance {
+  width: 300px;
+  height: 300px;
+}
+.em-emoji-picker,
 #root {
   height: 400px;
 }
